--- a/Code/spfxscreenreader/package.json
+++ b/Code/spfxscreenreader/package.json
@@ -11,11 +11,12 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "~1.4.1",
     "@microsoft/decorators": "~1.4.1",
-    "@types/webpack-env": ">=1.12.1 <1.14.0",
+    "@microsoft/sp-application-base": "~1.4.1",
+    "@microsoft/sp-core-library": "~1.4.1",
     "@microsoft/sp-dialog": "~1.4.1",
-    "@microsoft/sp-application-base": "~1.4.1"
+    "@types/webpack-env": ">=1.12.1 <1.14.0",
+    "office-ui-fabric-react": "https://registry.npmjs.org/office-ui-fabric-react/-/office-ui-fabric-react-5.21.0.tgz"
   },
   "devDependencies": {
     "@microsoft/generator-sharepoint": "^1.4.1",
