--- a/Code/spfxscreenreader/package.json
+++ b/Code/spfxscreenreader/package.json
@@ -21,8 +21,7 @@
     "@pnp/odata": "^1.0.3",
     "@pnp/sp": "^1.0.3",
     "@types/webpack-env": ">=1.12.1 <1.14.0",
-    "office-ui-fabric-react": "https://registry.npmjs.org/office-ui-fabric-react/-/office-ui-fabric-react-5.21.0.tgz",
-    "sp-pnp-js": "^3.0.6"
+    "office-ui-fabric-react": "https://registry.npmjs.org/office-ui-fabric-react/-/office-ui-fabric-react-5.21.0.tgz"
   },
   "devDependencies": {
     "@microsoft/generator-sharepoint": "^1.4.1",
