--- a/Code/spfxscreenreader/package.json
+++ b/Code/spfxscreenreader/package.json
@@ -27,6 +27,7 @@
     "@microsoft/generator-sharepoint": "^1.4.1",
     "@microsoft/sp-build-web": "~1.4.1",
     "@microsoft/sp-module-interfaces": "~1.4.1",
+    "@microsoft/sp-office-ui-fabric-core": "^1.4.1",
     "@microsoft/sp-webpart-workbench": "~1.4.1",
     "@types/chai": ">=3.4.34 <3.6.0",
     "@types/mocha": ">=2.2.33 <2.6.0",
